# LESS

./: .gitignore  README.md  justfile  pyproject.toml
.ccpm/initiatives/cli-skeleton/: cli-skeleton.md
.ccpm/initiatives/cli-skeleton/bootstrap/: 2.md  epic.md
.ccpm/initiatives/cli-skeleton/bootstrap/updates/2/: stream-A.md
.ccpm/initiatives/initial-readme/: initial-readme.md
.ccpm/initiatives/initial-readme/readme-content/: 1.md  epic.md
.claude/: CLAUDE.md
ebless/: cli.py  discovery.py  indexer.py  inventory.py  logconfig.py
ebless/format/: __init__.py  pdf.py
tests/: conftest.py  pdf_factories.py  test_cli.py  test_discovery.py  test_format_pdf.py  test_indexer.py  test_inventory.py  test_logconfig.py  test_logging_cli.py  test_pdf_factories.py
tests/fixtures/pdf/: SOURCES.md
