[project]
name = "ebless"
version = "0.0.1"
description = "eBook LLM Empowered Semantic Search"
requires-python = ">=3.11"
dependencies = ["click>=8.1"]

[dependency-groups]
dev = ["pytest>=8"]

[project.scripts]
ebless = "ebless.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ebless"]
